--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 appnope==0.1.0
 backcall==0.1.0
 bcrypt==3.1.4
+black
 blinker==1.4
 cffi==1.14.2
-Click==7.0
+Click==7.1.2
 decorator==4.3.0
 Faker==0.9.1
 Flask==1.0.2
